REVISI API GET HASIL ANALISAS
